[package]
name = "nekocat"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["RustArchitecture <pedro.augusto.schroeder@gmail.com>"]
description = "..."
repository = "https://github.com/RustArchitecture/nekocat"
homepage = "https://github.com/RustArchitecture/nekocat"
documentation = "https://github.com/RustArchitecture/nekocat/tests"

exclude = [
    "tests/*",
    "tests",
    "main.rs"
]

[dependencies]
